2007-05-22  Brian Bidulock  <bidulock@openss7.org>

	* netperf_sctp_range: correct scls module names
	* netperf_sctp_rr: correct scls module names
	* netperf_sctp_stream: correct scls module names
	* nettest_xti.c: add some debugging statements

2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* netperf.spec.in: corrected array subscript syntax error

2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated release files
	* manual/news.texi: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* netperf.spec.in: make GPL version more obvious

2007-04-15  Brian Bidulock  <bidulock@openss7.org>

	* nettest_bsd.c: do no print transaction unless debug > 3
	* nettest_dlpi.c: do no print transaction unless debug > 3
	* nettest_ipv6.c: do no print transaction unless debug > 3
	* nettest_unix.c: do no print transaction unless debug > 3
	* nettest_xti.c: do no print transaction unless debug > 3

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* netperf_arr: display correct modules verbose
	* netperf_packet_byte: display correct modules verbose
	* netperf_sctp_rr: display correct modules verbose
	* netperf_sctp_stream: display correct modules verbose
	* netperf_snapshot: display correct modules verbose
	* netperf_tcp_range: display correct modules verbose
	* netperf_tcp_rr: display correct modules verbose
	* netperf_tcp_stream: display correct modules verbose
	* netperf_udp_range: display correct modules verbose
	* netperf_udp_rr: display correct modules verbose
	* netperf_udp_stream: display correct modules verbose
	* nettest_xti.c: use TPI direct for unitdata requests

2007-04-04  Brian Bidulock  <bidulock@openss7.org>
