@@ -1,3 +1,8 @@
+2007-05-25  Brian Bidulock  <bidulock@openss7.org>
+
+	* nettest_bsd.c: make TCP BSD tests comparable to XTI SCTP
+	* nettest_xti.c: get XTI SCTP tests working
+
 2007-05-22  Brian Bidulock  <bidulock@openss7.org>
 
 	* netperf_sctp_range: correct scls module names
